Fixed typos in comments and wave function definition equation

--- a/KS_3_Class.ipynb
+++ b/KS_3_Class.ipynb
@@ -2,54 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "    if (code_show){\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-       "    } else {\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-       "    }\n",
-       "    code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "Some hidden code... to show/hide this cell's raw code input, click (or double click if stubborn!) <a href=\"javascript:code_toggle()\">here</a>."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "div.warn {    \n",
-       "    background-color: #b3b3ff;\n",
-       "    border-color: #0000b3;\n",
-       "    border-left: 5px solid #0000b3;\n",
-       "    padding: 0.5em;\n",
-       "    }\n",
-       " </style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "from IPython.display import display\n",
@@ -81,9 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -227,7 +180,7 @@
    "source": [
     "#define x again here and rename it\n",
     "index = 0\n",
-    "for x_val in x: #comment on how for loops work\n",
+    "for x_val in x: #a loop iterating over every element in the array x, we access the element through x_val\n",
     "    y[index] = x_val*x_val\n",
     "    index = index + 1\n",
     "print(y)\n",
@@ -292,7 +245,7 @@
     "                    </div>                    \n",
     "                    <div class=\"col-md-6\">                   \n",
     "                        <p><b>wave function</b></p>\n",
-    "                        <p> $$ \\psi_n(x) = \\sqrt{\\frac{2}{L}}\\sin{\\frac{n\\pi}{L}}  $$ </p>\n",
+    "                        <p> $$ \\psi_n(x) = \\sqrt{\\frac{2}{L}}\\sin{\\frac{n\\pi x}{L}}  $$ </p>\n",
     "                    </div>\n",
     "                    <div class=\"col-md-6\">                    \n",
     "                        <p><b>energies</b></p>\n",
@@ -338,15 +291,13 @@
    "source": [
     "## 1.1 How do Python functions work?\n",
     "\n",
-    "A function has a definition followed by parantheses, which contain the function arguments. Functions typically also have a return value. See following example:"
+    "A function has a definition followed by parentheses, which contain the function arguments. Functions typically also have a return value. See following example:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Let's import some important packages before we start.\n",
@@ -367,9 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#A function starts with a `def` statement followed by the name of the function \n",
@@ -422,9 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#TASK 1 <insert code here>\n"
@@ -468,9 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def potential(x, box_l=0.0, box_r=5.0, height=100000.0): \n",
@@ -496,7 +441,7 @@
     "    \n",
     "    for i, xvalue in enumerate(x): #we loop through all x values\n",
     "        #enumerate is really nice. \n",
-    "        #It allows us to loop through an array and, for each value, gives us an index i and the actual value xvalue\n",
+    "        #It allows us to loop through an array and, for each value, gives us an index i and the actual xvalue\n",
     "        if (xvalue<box_l): #left wall\n",
     "            pot[i] = height\n",
     "        elif (xvalue> box_l and xvalue < box_r): #inside the box\n",
@@ -510,7 +455,7 @@
     "            #This would lead to a controlled end of the code with this error message on display.\n",
     "            raise ValueError(\"COMPUTER SAYS NO. This point should never be reached.\")\n",
     "    \n",
-    "    #as usual, we need to retun the result\n",
+    "    #as usual, we need to return the result\n",
     "    return pot\n",
     "    "
    ]
@@ -533,9 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#TASK 3 \n",
@@ -601,9 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_H(x, pot):\n",
@@ -673,9 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def diagonalise_H(H):\n",
@@ -861,9 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def pib1d(N, box_l, box_r, height=100000.0):\n",
@@ -898,7 +835,7 @@
    },
    "outputs": [],
    "source": [
-    "#Let's give this programm (function of functions) a test run\n",
+    "#Let's give this program (function of functions) a test run\n",
     "\n",
     "#Number of grid points\n",
     "N = 2000\n",
@@ -936,9 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#TASK\n",
@@ -968,9 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#potential function\n",
@@ -1024,9 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1047,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
