remove Task 2 answer

--- a/KS_3_Class.ipynb
+++ b/KS_3_Class.ipynb
@@ -395,10 +395,7 @@
     "#<insert code here>\n",
     "\n",
     "#When we call functions, we call the function name and assign input values. \n",
-    "#The function will create something, which we need to pass into a variable\n",
-    "x = make_xgrid(-1, 6, 100) #make_x_grid creates a grid form -1 to 6 with 100 points. That grid is assigned to the variable x.\n",
-    "\n",
-    "#print(x)"
+    "#The function will create something, which we need to pass into a variable"
    ]
   },
   {
