--- a/KS_3_Class.ipynb
+++ b/KS_3_Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,6 +227,7 @@
    "source": [
     "#define x again here and rename it\n",
     "index = 0\n",
+    "y = np.zeros(len(x)) #define an array of the same length as x filled with zeros\n",
     "for x_val in x: #comment on how for loops work\n",
     "    y[index] = x_val*x_val\n",
     "    index = index + 1\n",
