--- a/KS_3_Class.ipynb
+++ b/KS_3_Class.ipynb
@@ -2,9 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       "    if (code_show){\n",
+       "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
+       "    } else {\n",
+       "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
+       "    }\n",
+       "    code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "Some hidden code... to show/hide this cell's raw code input, click (or double click if stubborn!) <a href=\"javascript:code_toggle()\">here</a>."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "div.warn {    \n",
+       "    background-color: #b3b3ff;\n",
+       "    border-color: #0000b3;\n",
+       "    border-left: 5px solid #0000b3;\n",
+       "    padding: 0.5em;\n",
+       "    }\n",
+       " </style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import HTML\n",
     "from IPython.display import display\n",
@@ -976,7 +1021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
