--- a/CW_3_Class.ipynb
+++ b/CW_3_Class.ipynb
@@ -1,43 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "from IPython.display import display\n",
-    "\n",
-    "# Taken from https://stackoverflow.com/questions/31517194/how-to-hide-one-specific-cell-input-or-output-in-ipython-notebook\n",
-    "tag = HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "    if (code_show){\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-    "    } else {\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-    "    }\n",
-    "    code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "Some hidden code... to show/hide this cell's raw code input, click (or double click if stubborn!) <a href=\"javascript:code_toggle()\">here</a>.''')\n",
-    "display(tag)\n",
-    "\n",
-    "############### Write code below ##################\n",
-    "from IPython.core.display import HTML\n",
-    "def css_styling():\n",
-    "    styles = open(\"./STUFF/colors.css\", \"r\").read()\n",
-    "    return HTML(styles)\n",
-    "css_styling()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=alert-info>\n",
     "These blue boxes contain instructions for you to follow, or stuff for you to do\n",
     "<h2>How to access this Jupyter notebook</h2>\n",
     "\n",
@@ -90,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from rdkit import Chem #RDKIT is a useful package for drawing molecules and operating on them\n",
@@ -149,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=alert-info>\n",
     "\n",
     "<b> Task 1: Use the following text cell to make notes and answer following questions:</b><br>\n",
     "\n",
@@ -176,12 +145,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can consider the connectivity matrices to be Hückel matrices, where we have set\n",
+    " We can consider the connectivity matrices to be Hückel matrices, where we have set\n",
     "$$\\alpha=\\langle \\phi_i|H|\\phi_i\\rangle = 0 $$\n",
     "and \n",
     "$$\\beta=\\langle \\phi_i|H|\\phi_j\\rangle = -1 $$\n",
     "\n",
-    "**NOTE**: Because we have set $\\beta=-1$, our energies will be numbers that already reflect the correct energy ordering. Therefore, we do not have to consider the implicit fact that $\\beta<0$ in $2\\beta$ ie. the lower the number, the more stable the energy level. We have to use actual numbers, as we cannot use variables $\\alpha,\\beta$ in a numerical code."
+    "<div class=\"alert-success\">\n",
+    "**NOTE**: Because we have set $\\beta=-1$, our energies will be numbers that already reflect the correct energy ordering. Therefore, we do not have to consider the implicit fact that $\\beta<0$ in $2\\beta$ ie. the lower the number, the more stable the energy level. We have to use actual numbers, as we cannot use variables $\\alpha,\\beta$ in a numerical code.\n",
+    "</div>"
    ]
   },
   {
@@ -202,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=alert-info>\n",
     "\n",
     "<b> Task 2:</b> Explore the Hückel SHMO module<br>\n",
     "\n",
@@ -224,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#select Acenaphthalene\n",
@@ -291,7 +264,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Let's print the MO energies\n",
@@ -307,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#MO eigenvectors\n",
@@ -330,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline \n",
@@ -350,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#charge populations\n",
@@ -368,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#net charges (charge populations - atomic charge)\n",
@@ -386,7 +369,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#atomic self-polarisabilities\n",
@@ -405,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#total energy\n",
@@ -445,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def print_bond_orders(mat, solver):\n",
@@ -482,7 +471,7 @@
     "collapsed": true
    },
    "source": [
-    "<div class=warn>\n",
+    "<div class=alert-info>\n",
     "\n",
     "<b> Task 4</b><br>\n",
     "\n",
@@ -544,21 +533,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
