Alternate energy level plot, now function

--- a/CW_3_Class.ipynb
+++ b/CW_3_Class.ipynb
@@ -265,11 +265,27 @@
     "#Let's print the MO energies\n",
     "print(solver.energies)\n",
     "\n",
+    "#Plot energy level function\n",
+    "def plot_energy_levels(energies):\n",
+    "    \n",
+    "    #Plot positive and negative energy values as well as dashed line at 0\n",
+    "    plt.plot(np.zeros(len(energies[energies<0])), energies[energies<0],lw=0.0,marker='_',ms=35,mew=2,color='blue')\n",
+    "    plt.plot(np.zeros(len(energies[energies>=0])), energies[energies>=0],lw=0.0,marker='_',ms=35,mew=2,color='red')\n",
+    "    plt.hlines(0,xmin=-1,xmax=1,linestyle='dashed',alpha=0.6)\n",
+    "    \n",
+    "    #Label energies next to points\n",
+    "    for i,e in enumerate(energies):\n",
+    "        if round(energies[i],1) == round(energies[i-1],1):\n",
+    "            plt.text(0.22, e-0.05, ', {:.2f} eV'.format(e), fontsize=9)\n",
+    "        else:\n",
+    "            plt.text(0.1, e-0.05, '{:.2f} eV'.format(e), fontsize=9)\n",
+    "    \n",
+    "    plt.xlim(-.5,.5)\n",
+    "    plt.axis('off')\n",
+    "    plt.show()\n",
+    "\n",
     "#energy level diagram for benzene\n",
-    "plt.plot(np.zeros(len(solver.energies)), solver.energies,lw=0.0,marker='_',ms=25,mew=3)\n",
-    "plt.xlim(-2,2)\n",
-    "plt.ylabel('energies')\n",
-    "plt.show()"
+    "plot_energy_levels(solver.energies)"
    ]
   },
   {
@@ -551,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
