Change formatting to match CW_3

--- a/KS_4_Class.ipynb
+++ b/KS_4_Class.ipynb
@@ -1,88 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "    if (code_show){\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-       "    } else {\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-       "    }\n",
-       "    code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "Some hidden code... to show/hide this cell's raw code input, click (or double click if stubborn!) <a href=\"javascript:code_toggle()\">here</a>."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "div.warn {    \n",
-       "    background-color: #b3b3ff;\n",
-       "    border-color: #0000b3;\n",
-       "    border-left: 5px solid #0000b3;\n",
-       "    padding: 0.5em;\n",
-       "    }\n",
-       " </style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import HTML\n",
-    "from IPython.display import display\n",
-    "\n",
-    "# Taken from https://stackoverflow.com/questions/31517194/how-to-hide-one-specific-cell-input-or-output-in-ipython-notebook\n",
-    "tag = HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "    if (code_show){\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-    "    } else {\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-    "    }\n",
-    "    code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "Some hidden code... to show/hide this cell's raw code input, click (or double click if stubborn!) <a href=\"javascript:code_toggle()\">here</a>.''')\n",
-    "display(tag)\n",
-    "\n",
-    "############### Write code below ##################\n",
-    "from IPython.core.display import HTML\n",
-    "def css_styling():\n",
-    "    styles = open(\"./STUFF/colors.css\", \"r\").read()\n",
-    "    return HTML(styles)\n",
-    "css_styling()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "    \n",
     "These blue boxes contain instructions for you to follow, or stuff for you to do\n",
     "<h2>How to access this Jupyter notebook</h2>\n",
     "\n",
@@ -93,6 +16,7 @@
     "* <b>Step 5</b>: You're all set! <br>\n",
     "* <b>Step 6</b>: <font color=\"red\">When you are done, remember to click the \"Stop Server\" button in the launcher web browser tab.</font> Please do, it's really quite important. <br>\n",
     "<b> Remember: </b> You can access your copy of the Notebook at any time from any device off and on campus by going through the same steps on e.g. your laptop - all the changes you have made will be saved and synced! <br>\n",
+    "\n",
     "<div/>"
    ]
   },
@@ -206,10 +130,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "### <font>Task 1:</font>\n",
-    "Produce a line plot of $y=x^{3}$ for $x=-3,\\,-2,\\,-1,\\,0,\\,1,\\,2,\\,3$"
+    "Produce a line plot of $y=x^{3}$ for $x=-3,\\,-2,\\,-1,\\,0,\\,1,\\,2,\\,3$\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -260,14 +186,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "### <font>Task 2:</font>\n",
     "Repeat task 1 (plot $y=x^{3}$ for $x=-3,\\,-2,\\,-1,\\,0,\\,1,\\,2,\\,3$) but add a plot of $y=x^{2}$ (use the same $x$-values for both plots) onto the figure\n",
     "\n",
     "<b>Hint</b>:\n",
     "\n",
-    "If you define your x-values as an array rather than a list, it becomes quicker and easier to generate your two sets of y-data"
+    "If you define your x-values as an array rather than a list, it becomes quicker and easier to generate your two sets of y-data\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -347,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "### <font>Task 3:</font>\n",
     "The sinc function is defined as:\n",
@@ -358,7 +286,9 @@
     "\n",
     "<code>np.pi</code> - $\\pi$\n",
     "\n",
-    "<code>np.sin(x)</code> - returns the sine of 'x'"
+    "<code>np.sin(x)</code> - returns the sine of 'x'\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -476,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "### <font>Task 4:</font>\n",
     "Consider the following first-order chemical reaction: \n",
@@ -496,7 +426,9 @@
     "\n",
     "<b>Useful commands</b>:\n",
     "\n",
-    "<code>np.exp(x)</code> - returns the value of $e^{x}$"
+    "<code>np.exp(x)</code> - returns the value of $e^{x}$\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -550,10 +482,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "### <font>Task 5:</font>\n",
-    "Plot graphs of $y=e^{-x}$ and $y=\\dfrac{x^{3}}{4}$ over the range $0\\leq x\\leq4$. Set the $x-$ and $y-$axis ranges so as to focus on the region where the two lines cross. Remember to label your axes and include a plot legend."
+    "Plot graphs of $y=e^{-x}$ and $y=\\dfrac{x^{3}}{4}$ over the range $0\\leq x\\leq4$. Set the $x-$ and $y-$axis ranges so as to focus on the region where the two lines cross. Remember to label your axes and include a plot legend.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -765,11 +699,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "### <font >Task 6:</font>\n",
     "    \n",
-    "Using the code above as a guide (i.e. copy and paste the bits you need and modify where appropriate), prepare and export plots of $y=\\cos(nx)$ over the range $x=-\\pi/2$ to $x=\\pi/2$ and for n=1,2,3, and 4. Save your plots as a pdf file, and as png images with resolutions of 40 dpi and 400 dpi."
+    "Using the code above as a guide (i.e. copy and paste the bits you need and modify where appropriate), prepare and export plots of $y=\\cos(nx)$ over the range $x=-\\pi/2$ to $x=\\pi/2$ and for n=1,2,3, and 4. Save your plots as a pdf file, and as png images with resolutions of 40 dpi and 400 dpi.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -846,10 +782,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "### <font >Task 7:</font>\n",
-    "Create a plot of Intensity <i>vs.</i> wavenumber. Remember to label the axes."
+    "Create a plot of Intensity <i>vs.</i> wavenumber. Remember to label the axes.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -876,10 +814,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "### <font >Task 8:</font>\n",
-    "Attempt to read in the file 'deviousHeaders.csv' (located in the 'STUFF' folder) and see what happens... If you start to panic because there is an error message, I suggest that you <b>read the paragraph above</b>"
+    "Attempt to read in the file 'deviousHeaders.csv' (located in the 'STUFF' folder) and see what happens... If you start to panic because there is an error message, I suggest that you <b>read the paragraph above</b>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -902,12 +842,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "### <font >Task 9:</font>\n",
     "Repeat task 8, but include the optional argument ```skiprows=1```. This line will tell numpy to ignore the first row which contains the problematic non-numerical data.\n",
     "\n",
-    "Plot the data as in task 7."
+    "Plot the data as in task 7.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -996,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "### <font >Task 10:</font>\n",
     "\n",
@@ -1005,7 +947,9 @@
     "* Plot these functions over the range $0-4\\pi$. \n",
     "* Set the size of the figure to be 10 inches by 3 inches\n",
     "* Include axis labels and a legend (plot line legends are still defined by adding a ```label``` attribute to the ```plt.plot``` function call, but the legend itself will not appear unless ```legend``` is called on the plot ```Axes``` object - <i>e.g.</i> with an ```ax.legend()``` command).\n",
-    "* Add a title to your plot using ```ax.set_title(YourTitle)```."
+    "* Add a title to your plot using ```ax.set_title(YourTitle)```.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1131,13 +1075,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=warn>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "### <font >Task 11:</font>\n",
     "\n",
     "Create a 2$\\times$2 array of subplots, and plot the first four members of the series $y=x^{n}\\sin(x)$ over the range $x=-3\\pi$ to $x=3\\pi$. Make sure to include plot legends. See if you can incorporate the following features into your code:\n",
     "* Create the axes objects and plots using loop structures\n",
-    "* Share the $x-$ and $y-$ axes amongst the plots. <b>Hint:</b> you will need to normalise the plots (i.e. scale the maximum value for y in each case to 1) to make this work properly."
+    "* Share the $x-$ and $y-$ axes amongst the plots. <b>Hint:</b> you will need to normalise the plots (i.e. scale the maximum value for y in each case to 1) to make this work properly.\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1352,7 +1298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
