--- a/Python_Video2.ipynb
+++ b/Python_Video2.ipynb
@@ -5,15 +5,18 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
+    "    \n",
     "These blue boxes contain instructions for you to follow, or stuff for you to do\n",
     "<h2>How to access this Jupyter notebook</h2>\n",
     "\n",
-    "* <b>Step 1</b>: Open a web browser, go to [this page](https://warwick.ac.uk/fac/sci/chemistry/research/maurer/maurergroup/software/iatl_strategic_project/), scroll down, download the Login App (the Windows exacutable if using ITS machines) and double click on the executable (usually ended up into the Download folder) <br>\n",
-    "* <b>Step 2</b>: The Notebook Launcher pops up: select the CH274 module and fill in the boxes using your SCRTP username and password <br>\n",
-    "* <b>Step 3</b>: Open the Jupyter notebook you are interested in, e.g. KS_3_Class.ipynb <br>\n",
-    "* <b>Step 4</b>: Make a copy of the orginal notebook (which is read only). In the toolbar on top of the notebook: File - Make a Copy <br>\n",
-    "* <b>Step 5</b>: You're all set! <br><br>\n",
-    "<b> Remember: </b> You can access this notebook at home at any time by going through the same steps on e.g. your laptop - all the changes you have made will be saved and synced!<br>\n",
+    "* <b>Step 1</b>: Open a web browser,  and go to [this page](https://jupyter.warwick.ac.uk/module/CH274), \n",
+    "* <b>Step 2</b>: Enter your SCRTP username and password and press the \"Start Server\" button.<br>\n",
+    "* <b>Step 3</b>: Wait (it could take a few minutes) until the blue box says \"Jupyter notebook server running!\". At that point, click on the weblink below said message.<br>\n",
+    "* <b>Step 4</b>: Select the Jupyter Notebook you want to work on. <i>Remember to make a copy of the orginal notebook</i> (which is read-only). To do so, in the toolbar on top of the notebook, select File and then Make a Copy <br>\n",
+    "* <b>Step 5</b>: You're all set! <br>\n",
+    "* <b>Step 6</b>: <font color=\"red\">When you are done, remember to click the \"Stop Server\" button in the launcher web browser tab.</font> Please do, it's really quite important. <br>\n",
+    "<b> Remember: </b> You can access your copy of the Notebook at any time from any device off and on campus by going through the same steps on e.g. your laptop - all the changes you have made will be saved and synced! <br>\n",
+    "\n",
     "<div/>"
    ]
   },
@@ -21,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CH274: Computational Workshop 3\n",
+    "# CH274: Computational Workshop\n",
     "## Using a Hückel MO code to study Polyaromatic Hydrocarbons (PAHs)\n",
     "\n",
     "In this workshop, we are going to\n",
@@ -302,28 +305,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-2.4708374155    2\n",
-      "-1.687766689    2\n",
-      "-1.6825070657    2\n",
-      "-1.0    2\n",
-      "-0.830830026    2\n",
-      "-0.6375167897    2\n",
-      "0.2846296765    0.0\n",
-      "1.0    0.0\n",
-      "1.3097214679    0.0\n",
-      "1.4318461772    0.0\n",
-      "1.9189859472    0.0\n",
-      "2.364274717    0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#We can access the eigenvalues, eigenvectors and populations also via\n",
     "states = solver.populated_levels\n",
@@ -521,34 +505,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -567,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
