--- a/Python_Video2.ipynb
+++ b/Python_Video2.ipynb
@@ -64,7 +64,8 @@
     "ExecuteTime": {
      "end_time": "2020-01-21T14:53:14.142065Z",
      "start_time": "2020-01-21T14:53:08.617590Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -92,32 +93,36 @@
     "    rdkit_objects.append(mol_object)\n",
     "\n",
     "#These rdkit objects are stored in the 'molecules' list. \n",
-    "#Together with other thigns, they contain the connectivity matrices\n",
+    "#Together with other things, they contain the connectivity matrices\n",
     "\n",
-    "#list of three connnectivity/huckel matrices\n",
+    "#####The following is all the information you will need\n",
+    "\n",
+    "#list of  connnectivity/huckel matrices for three molecules\n",
     "conmats = [(molecules[0])['conmat'], molecules[1]['conmat'], molecules[2]['conmat']]\n",
     "#list of three molecule names\n",
     "names = names\n",
     "#list of three RDKIT molecule objects for visualization\n",
     "molecules = rdkit_objects\n",
     "\n",
+    "################Visualization\n",
+    "\n",
     "#The RDKIT molecule objects can be used for visualization\n",
-    "#display without atom numbering\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([molecules[0]], useSVG=True, legends=[names[0]], subImgSize=(300,300))))\n",
-    "#display with numbering\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[0])], useSVG=True, legends=[names[0]], subImgSize=(300,300))))\n",
+    "#display molecule 1\n",
+    "display(Chem.Draw.MolsToGridImage([molecules[0]], useSVG=True, legends=[names[0]], subImgSize=(300,300)))\n",
+    "\n",
+    "#display molecule 1 with numbering\n",
+    "display(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[0])], useSVG=True, legends=[names[0]], subImgSize=(300,300)))\n",
     "#print the connectivity matrix for molecule 1\n",
     "matprint(conmats[0])\n",
     "\n",
     "#molecule 2\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[1])], useSVG=True, legends=[names[1]], subImgSize=(300,300))))\n",
-    "matprint(conmats[1])\n",
+    "display(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[1])], useSVG=True, legends=[names[1]], subImgSize=(300,300)))\n",
+    "matprint(conmats[1]) # print matrix for mol 2\n",
     "\n",
     "#molecule 3\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[2])], useSVG=True, legends=[names[2]], subImgSize=(300,300))))\n",
-    "matprint(conmats[2])\n",
-    "#This line generates the picture of the three molecules\n",
-    "\n"
+    "display(Chem.Draw.MolsToGridImage([mol_with_atom_index(molecules[2])], useSVG=True, legends=[names[2]], subImgSize=(300,300)))\n",
+    "matprint(conmats[2]) # print matrix for mol 3\n",
+    "#This line generates the picture of the three molecules\n"
    ]
   },
   {
@@ -203,13 +208,13 @@
    "outputs": [],
    "source": [
     "#select Acenaphthalene\n",
-    "mol, rdkit_mol = select_molecule('Acenaphthalene')\n",
+    "mol, rdkit_mol = select_molecule('Acenaphthalene') # this function returns the molecule data and the rdkit object to visualise\n",
     "\n",
     "#get hueckel matrix\n",
     "huckel_matrix = mol['conmat']\n",
     "\n",
     "#draw molecule from rdkit mol object\n",
-    "display(SVG(Chem.Draw.MolsToGridImage([rdkit_mol], useSVG=True, legends=['Acenaphthalene'], subImgSize=(160,160))))\n",
+    "display(Chem.Draw.MolsToGridImage([rdkit_mol], useSVG=True, legends=['Acenaphthalene'], subImgSize=(160,160)))\n",
     "\n",
     "#print hueckel matrix\n",
     "matprint(huckel_matrix)"
@@ -221,10 +226,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#initialise hueckel solver\n",
+    "#initialise hueckel solver with previously created huckel_matrix\n",
     "solver = shmo.HuckelSolver(data=huckel_matrix)\n",
     "##NOTE!: Each time you change the molecule, you need to reinitialise the Huckel solver, \n",
-    "#ie. call the above line with a new huckel matrix!"
+    "#ie. call the above line with a new huckel matrix! This is really important."
    ]
   },
   {
@@ -256,7 +261,8 @@
    "outputs": [],
    "source": [
     "#YOUR CODE HERE\n",
-    "#\n"
+    "#\n",
+    "\n"
    ]
   },
   {
@@ -270,6 +276,10 @@
     "\n",
     "#Plot energy level function\n",
     "def plot_energy_levels(energies):\n",
+    "    \"\"\"\n",
+    "    Simple function to plot an MO energy level diagram.\n",
+    "    takes a np array of energies as input and generates a matplotlib plot.\n",
+    "    \"\"\"\n",
     "    \n",
     "    #Plot positive and negative energy values as well as dashed line at 0\n",
     "    plt.plot(np.zeros(len(energies[energies<0])), energies[energies<0],lw=0.0,marker='_',ms=35,mew=2,color='blue')\n",
@@ -289,6 +299,13 @@
     "\n",
     "#energy level diagram for benzene\n",
     "plot_energy_levels(solver.energies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the next function we can print the matrix of MO eigenvectors. The eigenvectors are the columns in this matrix, so the 1st column (eigenvecs[:,0]) is the 1st MO and so on"
    ]
   },
   {
@@ -346,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also visualize the number of electrons on each carbon atom"
+    "We can also visualize the number of electrons on each carbon atom. The larger the blue circle, the more electrons."
    ]
   },
   {
@@ -364,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can visualize the net charges on each atom"
+    "We can visualize the net charges on each atom. Red means partial positive charge. Blue means partial negative charge. Compare with the above elecron populations."
    ]
   },
   {
@@ -411,38 +428,43 @@
    "outputs": [],
    "source": [
     "#total energy\n",
-    "def calculate_total_energy(solver):\n",
+    "def calculate_total_energy(matrix, charge=0):\n",
     "    \"\"\"\n",
-    "    This function calculates the total energy\n",
+    "    This function calculates the total energy for a given hueckel matrix. \n",
+    "    It takes a huckel matrix as input, creates a shmo solver object, and calculates the total energy.\n",
+    "    The return value is the total energy.\n",
+    "    We define an optional variable that allows us to change the number of electrons in the molecule by adjusting the charge.\n",
+    "    \n",
     "    \"\"\"\n",
+    "    import shmo\n",
+    "    solver = shmo.HuckelSolver(data=matrix)\n",
+    "    nelectrons = solver.num_electrons #how many electrons does the molecule have by default\n",
+    "    solver.set_num_electrons(nelectrons-charge) # adjust the number of electrons to match molecular charge\n",
+    "    \n",
     "    total_energy = 0.0\n",
     "    for energy, coeffs, occupation in solver.populated_levels:\n",
     "        #MO energy level times occupation\n",
     "        total_energy += energy*occupation\n",
     "    return total_energy\n",
     "\n",
+    "#We use the variable huckel_matrix that we have defined earlier above.\n",
+    "\n",
     "#neutral molecule energy\n",
     "print('neutral molecule')\n",
-    "solver.set_num_electrons(12)\n",
-    "print(calculate_total_energy(solver))\n",
+    "print(calculate_total_energy(huckel_matrix))\n",
     "\n",
-    "n = calculate_total_energy(solver)\n",
-    "\n",
-    "nelectrons = solver.num_electrons\n",
+    "energy_neutral = calculate_total_energy(huckel_matrix) #this is how we store the energy in a variable\n",
     "\n",
     "#make cation\n",
     "print('cation')\n",
-    "solver.set_num_electrons(nelectrons-1)\n",
-    "print(calculate_total_energy(solver))\n",
+    "print(calculate_total_energy(huckel_matrix, charge=1))\n",
     "\n",
-    "c = calculate_total_energy(solver)\n",
+    "energy_cation = calculate_total_energy(huckel_matrix, charge=1)\n",
     "\n",
     "#make anion\n",
     "print('anion')\n",
-    "solver.set_num_electrons(nelectrons+1)\n",
-    "print(calculate_total_energy(solver))\n",
-    "\n",
-    "solver.set_num_electrons(nelectrons)"
+    "print(calculate_total_energy(huckel_matrix, charge=-1))\n",
+    "\n"
    ]
   },
   {
@@ -451,12 +473,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_bond_orders(mat, solver):\n",
+    "def print_bond_orders(matrix):\n",
     "    \"\"\"\n",
-    "    print bond orders to screen\n",
+    "    Function that calculates bond orders and returns a np array with relevant atom pairs and a list of associated bond_orders.\n",
+    "    Bond orders are also printed to screen.\n",
     "    \"\"\"\n",
     "\n",
-    "    bond_orders=np.multiply(-mat,solver.bond_orders)\n",
+    "    import shmo\n",
+    "    solver = shmo.HuckelSolver(data=matrix)\n",
+    "    \n",
+    "    # We multpily the bond orders with the connectivity matrix, to ensure that we only look at those that are connected. \n",
+    "    #Don't worry if this goes over your head. It's a technical detail.\n",
+    "    bond_orders=np.multiply(-matrix,solver.bond_orders) \n",
     "\n",
     "    print('atom i    atom j    bond order')\n",
     "    atom_pairs = []\n",
@@ -468,8 +496,9 @@
     "        borders.append(bond_orders[i,j])\n",
     "\n",
     "    return atom_pairs, borders\n",
-    "        \n",
-    "atom_pairs, bond_orders = print_bond_orders(huckel_matrix, solver)"
+    "\n",
+    "\n",
+    "atom_pairs, bond_orders = print_bond_orders(matrix=huckel_matrix)"
    ]
   },
   {
@@ -505,6 +534,20 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -523,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
