--- a/Python_Video2.ipynb
+++ b/Python_Video2.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-01-21T14:53:14.142065Z",
@@ -67,19 +67,7 @@
     },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rdkit'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-0f3dac7eaa6a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mrdkit\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mChem\u001b[0m \u001b[0;31m#RDKIT is a useful package for drawing molecules and operating on them\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrdkit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDraw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mrdkit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mChem\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAllChem\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSVG\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#functions that operate on the PAH database\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'rdkit'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rdkit import Chem #RDKIT is a useful package for drawing molecules and operating on them\n",
     "import rdkit.Chem.Draw\n",
@@ -123,16 +111,16 @@
     "draw_molecule(molecules[0])\n",
     "\n",
     "#display molecule 1 with numbering\n",
-    "draw_molecule(mol_with_atom_index(molecules[0]), names=names[0])\n",
+    "draw_molecule(mol_with_atom_index(molecules[0]), legend=names[0])\n",
     "#print the connectivity matrix for molecule 1\n",
     "matprint(conmats[0])\n",
     "\n",
     "#molecule 2\n",
-    "draw_molecule(mol_with_atom_index(molecules[1]), names=names[1])\n",
+    "draw_molecule(mol_with_atom_index(molecules[1]), legend=names[1])\n",
     "matprint(conmats[1]) # print matrix for mol 2\n",
     "\n",
     "#molecule 3\n",
-    "draw_molecule(mol_with_atom_index(molecules[2]), names=names[2])\n",
+    "draw_molecule(mol_with_atom_index(molecules[2]), legend=names[2])\n",
     "matprint(conmats[2]) # print matrix for mol 3\n",
     "#This line generates the picture of the three molecules\n"
    ]
@@ -226,7 +214,7 @@
     "huckel_matrix = mol['conmat']\n",
     "\n",
     "#draw molecule from rdkit mol object\n",
-    "draw_molecule(rdkit_mol, names=[\"Acenaphthalene\"])\n",
+    "draw_molecule(rdkit_mol, legend=[\"Acenaphthalene\"])\n",
     "#print hueckel matrix\n",
     "matprint(huckel_matrix)"
    ]
