--- a/Python_Video2.ipynb
+++ b/Python_Video2.ipynb
@@ -72,7 +72,6 @@
     "from rdkit import Chem #RDKIT is a useful package for drawing molecules and operating on them\n",
     "import rdkit.Chem.Draw\n",
     "from rdkit.Chem import AllChem\n",
-    "from IPython.display import SVG, display\n",
     "#functions that operate on the PAH database\n",
     "from PAH_data import select_molecule, matprint, mol_with_atom_index, draw_molecule, draw_MO\n",
     "import matplotlib.pyplot as plt\n",
@@ -108,7 +107,7 @@
     "\n",
     "#The RDKIT molecule objects can be used for visualization\n",
     "#display molecule 1\n",
-    "draw_molecule(molecules[0])\n",
+    "draw_molecule(molecules[0], legend=names[0])\n",
     "\n",
     "#display molecule 1 with numbering\n",
     "draw_molecule(mol_with_atom_index(molecules[0]), legend=names[0])\n",
@@ -513,7 +512,7 @@
     "collapsed": true
    },
    "source": [
-    "<div class=alert-info>\n",
+    "<div class=\"alert alert-block alert-info\">\n",
     "\n",
     "<b> Task 4</b><br>\n",
     "\n",
